euphony-dsp/src/snapshots/euphony_dsp__unary__Round.snap
---
source: euphony-dsp/src/unary.rs
expression: node
---
Node {
    name: "Round",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 23,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Returns the nearest integer to a number. Round half-way cases away from `0.0`.\n",
    fork: None,
}
