euphony-dsp/src/snapshots/euphony_dsp__unary__Signum.snap
---
source: euphony-dsp/src/unary.rs
expression: node
---
Node {
    name: "Signum",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 24,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Returns a number that represents the sign of `self`.\n\n * `1.0` if the number is positive, `+0.0` or `INFINITY`\n * `-1.0` if the number is negative, `-0.0` or `NEG_INFINITY`\n * `NAN` if the number is `NAN`\n",
    fork: None,
}
