euphony-dsp/src/snapshots/euphony_dsp__unary__Sin.snap
---
source: euphony-dsp/src/unary.rs
assertion_line: 196
expression: node
---
Node {
    name: "Sin",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 25,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Computes the sine of a number (in radians).\n",
}
