euphony-dsp/src/snapshots/euphony_dsp__unary__Sinh.snap
---
source: euphony-dsp/src/unary.rs
expression: node
---
Node {
    name: "Sinh",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 26,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    docs: " Hyperbolic sine function.\n",
}
