euphony-dsp/src/snapshots/euphony_dsp__unary__Sqrt.snap
---
source: euphony-dsp/src/unary.rs
expression: node
---
Node {
    name: "Sqrt",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 27,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    docs: " Returns the square root of a number.\n\n Returns `NaN` if `self` is a negative number other than `-0.0`.\n",
}
