euphony-dsp/src/snapshots/euphony_dsp__unary__Tanh.snap
---
source: euphony-dsp/src/unary.rs
expression: node
---
Node {
    name: "Tanh",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 29,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    docs: " Hyperbolic tangent function.\n",
}
