euphony-dsp/src/snapshots/euphony_dsp__unary__ToDegrees.snap
---
source: euphony-dsp/src/unary.rs
expression: node
---
Node {
    name: "ToDegrees",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 30,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Converts radians to degrees.\n",
    fork: None,
}
