euphony-dsp/src/snapshots/euphony_dsp__unary__ToRadians.snap
---
source: euphony-dsp/src/unary.rs
expression: node
---
Node {
    name: "ToRadians",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 31,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    docs: " Converts degrees to radians.\n",
}
