euphony-dsp/src/snapshots/euphony_dsp__unary__Trunc.snap
---
source: euphony-dsp/src/unary.rs
expression: node
---
Node {
    name: "Trunc",
    module: [
        "unary",
    ],
    impl_path: "euphony_dsp::unary",
    id: 32,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Returns the integer part of a number.\n",
    fork: None,
}
